# rs_JESSICA

./: .gitignore  README.md  README_INP_FILE.md  epanet_simulation_3steps.md  gmon.out  makefile  plot_network.py  prompt.md  prompt.yml  prompt_answer_inp_file.md  prompt_answer_simulation.md  pump_scheduling_equations.md  requirements.txt  rule_epanet_software.md
Artigo B&B/: rascunho.tex  rct.bib
Artigo B&B/rctart-class/: rctartbabel.sty  rctartenvs.sty
codes/: bbsolver.py  bbsolver_michael.py  bbsolver_patterns.py  bbsolver_test.ipynb  bbsolver_test.py  compare_snapshots.py  deepcopy.py  economic.py  economic_custom.py  gitcmp.py  input.inp  parbb.cpp  parbb.py  parse_sols.py  temp.inp  temp.rpt
codes/claude/: parbb.py
codes/results/: pressures.csv  tank_levels.csv
dataset/: any-town.rpt
epanet-dev/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  check_results.ipynb  concat_files.sh  hardware_info.py  makefile  test_scaling.py
epanet-dev/doc/: Doxyfile
epanet-dev/src/: epanet3.h
epanet-dev/src/CLI/: .clang-format  BBConfig.cpp  BBConfig.h  BBConstraints.cpp  BBConstraints.h  BBCounter.cpp  BBCounter.h  BBPruneReason.h  BBSConfig.cpp  BBSolver.cpp  BBSolver.h  BBSolverConfig.cpp  BBSolverConfig.h  BBStatistics.h  BBStats.cpp  BBStats.h  BBTests.h  ColorStream.cpp  ColorStream.h  Console.cpp  Console.h  Helper.cpp  Helper.h  Profiler.h  Utils.cpp  Utils.h  main.cpp
epanet-dev/src/Core/: constants.h  datamanager.cpp  datamanager.h  diagnostics.cpp  diagnostics.h  epanet3.cpp  error.cpp  error.h  hydbalance.cpp  hydbalance.h  hydengine.cpp  hydengine.h  network.cpp  network.h  options.cpp  options.h  project.cpp  project.h  qualbalance.cpp  qualbalance.h  qualengine.cpp  qualengine.h  units.cpp  units.h
epanet-dev/src/Elements/: control.cpp  control.h  curve.cpp  curve.h  demand.cpp  demand.h  element.cpp  element.h  emitter.cpp  emitter.h  junction.cpp  junction.h  link.cpp  link.h  node.cpp  node.h  pattern.cpp  pattern.h  pipe.cpp  pipe.h  pump.cpp  pump.h  pumpcurve.cpp  pumpcurve.h  qualsource.cpp  qualsource.h  reservoir.cpp  reservoir.h  tank.cpp  tank.h  valve.cpp  valve.h
epanet-dev/src/Input/: controlparser.cpp  controlparser.h  curveparser.cpp  curveparser.h  inputparser.cpp  inputparser.h  inputreader.cpp  inputreader.h  linkparser.cpp  linkparser.h  nodeparser.cpp  nodeparser.h  optionparser.cpp  optionparser.h  patternparser.cpp  patternparser.h
epanet-dev/src/Models/: demandmodel.cpp  demandmodel.h  headlossmodel.cpp  headlossmodel.h  leakagemodel.cpp  leakagemodel.h  pumpenergy.cpp  pumpenergy.h  qualmodel.cpp  qualmodel.h  tankmixmodel.cpp  tankmixmodel.h
epanet-dev/src/Output/: outputfile.cpp  outputfile.h  projectwriter.cpp  projectwriter.h  reportfields.cpp  reportfields.h  reportwriter.cpp  reportwriter.h
epanet-dev/src/Solvers/: ggasolver.cpp  ggasolver.h  hydsolver.cpp  hydsolver.h  ltdsolver.cpp  ltdsolver.h  matrixsolver.cpp  matrixsolver.h  qualsolver.cpp  qualsolver.h  sparspak.cpp  sparspak.h  sparspaksolver.cpp  sparspaksolver.h
epanet-dev/src/Utilities/: graph.cpp  graph.h  mempool.cpp  mempool.h  segpool.cpp  segpool.h  utilities.cpp  utilities.h
networks/: README.md  any-town-2.inp  any-town-4.inp  any-town-pumps.inp  any-town-test-2.inp  any-town.inp  any-town.md  any-town.out  any-town.rpt
notebooks/: Net3_LPS.inp  basic_demo.ipynb  comments.md  comments_jessica.md  temp.inp  temp.rpt
paper/: exemplos.tex  main.md  main.mmd  main.tex
paper/Dissertação/: documento.aux  documento.bbl  documento.blg  documento.tex  documento.toc
paper/Dissertação/1-pre-textuais/: abstract.tex  agradecimentos.tex  resumo.tex
paper/Dissertação/2-textuais/: 1-introducao.tex  2-revisao-bibliografica.tex  3-metodologia.tex  4-resultados.tex  5-conclusoes.tex
paper/Dissertação/3-pos-textuais/: referencias.bib
paper/Dissertação/lib/: preambulo.tex  ufcTex.sty
paper/rctart-class/: README.md  rctart.cls
paper/references/: rascunho.md
parbb/: Makefile  test_parbb.py
parbb/claude/: parbb.drawio
